Fix layout on mobile

--- a/style.css
+++ b/style.css
@@ -206,3 +206,34 @@ body {
 	-webkit-text-stroke: 2px black;
 	background-color: yellow;
 }
+
+@media (max-width: 800px) {
+	#calculator {
+		width: 80%;
+	}
+	html,
+	body {
+		height: 100vh;
+		width: 100vw;
+		position: fixed;
+	}
+	#middle-buttons > button,
+	#basic-operations > button,
+	#digits > #sign,
+	#digits > #dot {
+		font-size: 20px;
+		-webkit-text-stroke: 1px black;
+	}
+	#screen-top {
+		font-size: 30px;
+	}
+	#screen-bottom {
+		font-size: 50px;
+	}
+	#screen {
+		justify-content: space-between;
+	}
+	#middle-buttons sup {
+		font-size: 15px;
+	}
+}
